Added: readme file

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,9 +15,12 @@
           <input type="text" id="new-ticker" placeholder="Add Ticker" required>
           <button type="submit">Add</button>
      </form>
-     <p id="timer">Next Update in <span id="counter"></span> seconds.</p>
-     <div id="tickers-grid" class="tickers-grid"></div>
+     <p id="timer" class="ticker-timer">Next Update in <span id="counter"></span> seconds.</p>
 
+     <div id="loader-container">
+          <div id="loader"></div>
+     </div>
+     <div id="tickers-grid" class="tickers-grid"></div>
 </body>
 
 </html>
