--- a/static/style.css
+++ b/static/style.css
@@ -61,6 +61,13 @@
      background-color: #f5f5f5;
 }
 
+
+.ticker-timer {
+     text-align: center;
+     font-size: 18px;
+     font-weight: 700;
+}
+
 /* Individual stock box styling */
 .stock-box {
      width: 220px;
@@ -117,4 +124,48 @@
      transition: background-color 1s, transform 0.3s;
      background-color: #e0e0e0 !important;
      transform: scale(1.02);
+}
+
+/* Loader container styling */
+#loader-container {
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     height: 100px;
+     margin: 20px auto;
+}
+
+/* Circular loader styling */
+#loader {
+     width: 80px;
+     height: 80px;
+     border: 5px solid #f3f3f3;
+     border-top: 5px solid #007bff;
+     border-radius: 50%;
+     animation: spin 1s linear infinite, shrink var(--count-time, 15s) linear infinite;
+     transform-origin: center;
+}
+
+/* Animation for spinning */
+@keyframes spin {
+     0% {
+          transform: rotate(0deg);
+     }
+
+     100% {
+          transform: rotate(360deg);
+     }
+}
+
+/* Animation for shrinking */
+@keyframes shrink {
+     0% {
+          width: 80px;
+          height: 80px;
+     }
+
+     100% {
+          width: 0;
+          height: 0;
+     }
 }
